--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,2 @@
-@charset "UTF-8";
-/* CSS Document */
-
-.hidden
-{
-	display: none;
-}
+@import url("https://fonts.googleapis.com/css?family=Bungee+Shade&display=swap");#mainHeader{padding:10px;background-size:cover}#mainNav{display:flex;flex-direction:column}#mainNav #button{background:url(../images/burger.svg) center no-repeat;width:30px;height:30px;border:0px;margin-top:20px;margin-bottom:10px;transition:all 400ms ease;margin-left:auto;transition:all 400ms ease}#mainNav ul li a{display:block;padding:10px 0 10px 0;color:#f8f8f8;text-align:center;text-decoration:none;font-family:"Bungee Shade",cursive;transition:all .3s ease-in}#mainNav ul li a:hover{color:#C180FA}#mainNav button.expanded{-webkit-transform:rotate(90deg);-ms-transform:rotate(90deg);transform:rotate(90deg)}#burgerCon{margin-top:20px;display:none;margin-bottom:20px}#burgerCon.slideToggle{display:block;animation:navAnimation 1.7s 1 0s ease}@keyframes navAnimation{0%{transform:translateY(8%);opacity:0}100%{transform:translateY(0);opacity:1}}.hero{background:url(../images/background.jpg)}.hidden{display:none}
+/*# sourceMappingURL=main.css.map */
