--- a/sass/modules/_homePage.scss
+++ b/sass/modules/_homePage.scss
@@ -1,6 +1,8 @@
 
 .hero {
-    background: url(../images/background.jpg);
+    background: url(../images/background.jpg) center center;
+    background-size: cover;
+    // background: #161c2d;
 }
 
 .welcomeCon
@@ -8,12 +10,13 @@
     max-width: 1000px;
     margin: 0 auto;
     padding-bottom: 100px;
+    height: 400px;
 }
 
 .mainText {
-    margin-top: 100px;
+    margin-top: 70px;
     margin-left: 30px;
-    font-family: $nav-font;
+    font-family: $main-font;
     font-size: 25px;
     color: aliceblue;
 }
@@ -21,7 +24,7 @@
 .tagline {
     margin-top: 30px;
     margin-left: 50px;
-    font-family: $nav-font;
+    font-family: $main-font;
     font-size: 23px;
     color: aliceblue;
 }
