--- a/sass/modules/_homePage.scss
+++ b/sass/modules/_homePage.scss
@@ -1,6 +1,6 @@
 
 .hero {
-    background: url(../images/background.jpg) center center;
+    // background: url(../images/background.jpg) center center;
     background-size: cover;
     // background: #161c2d;
 }
