started contact.html build

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,8 @@
 @import "modules/_nav";
 @import "modules/_footer";
 @import "modules/_homePage";
-@import "modules/mediaQueries";
+@import "modules/_mediaQueries";
+@import "modules/_contact";
 
 
 
