--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -1,8 +1,56 @@
 
-.contactCon{
+.contactPage{
+   max-width: 1200px; 
+   margin: 0 auto;
+}
+
+.contactCon, .infoCon{
     max-width: 500px;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.contactCon{
+    margin-bottom: 80px;
+}
+
+.infoCon{
+
+    margin-bottom: 140px;
+
+    h2{
+        font-family: $main-font;
+        color: #608b8c; 
+        font-size: 25px;
+        margin-left: 100px;
+        margin-bottom: 30px;
+        margin-top: 70px;
+    }
+
+}
+
+.infoContent{
+
+    width: 100%;
+    height: 50px;
+
+    img{
+        float: left;
+        margin-right: 60px;
+        margin-left: 20px;
+        margin-top: 0;
+        transition: transform .2s;
+
+        &:hover{
+            transform: scale(1.15);
+        }
+    }
+
+    h3{
+        font-family: $main-font;
+        color: #f8f8f8;
+        font-size: 18px;
+    }
 }
 
 .contactHeader{
@@ -46,15 +94,23 @@ input{
     border: solid 2px #608b8c;
     width: 90%;
     height: 150px;
+    border-radius: 5px;
 }
 
 #submit{
     height: 60px;
-    width: 130px;
+    width: 120px;
     background: #608b8c;
     display: block;
     margin: 0 auto;
     color: #f8f8f8;
     font-size: 20px;
     font-family: $main-font;
+    border-radius: 3px;
+    transition: transform .2s;
+    letter-spacing: 0.5px;
+
+    &:hover{
+        transform: scale(1.1);
+    }
 }
