--- a/sass/modules/_mediaQueries.scss
+++ b/sass/modules/_mediaQueries.scss
@@ -1,3 +1,10 @@
+@media screen and (min-width: 600px){
+	.contactCon, .infoCon{
+		margin: 0 auto;
+	}
+}
+
+
 @media screen and (min-width: 1024px) {
 
     #mainHeader
@@ -44,4 +51,12 @@
 		display: flex;
 		flex-direction: row;
 	}
+
+	.contactPage{
+		display: flex;
+		flex-direction: row; 
+		justify-content: space-between;
+		margin: 0 auto;
+		padding-top: 70px;
+	 }
 }
