updated about page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,8 @@
 @import "modules/_mediaQueries";
 @import "modules/_contact";
 @import "modules/about";
+@import "modules/portfolio";
+@import "modules/featurePage";
 
 
 
