--- a/sass/modules/_homePage.scss
+++ b/sass/modules/_homePage.scss
@@ -1,6 +1,6 @@
 
 .hero {
-    // background: url(../images/background.jpg) center center;
+    background: url(../images/space_mobile.jpg) center center;
     background-size: cover;
     // background: #161c2d;
 }
@@ -9,9 +9,10 @@
 {
     max-width: 1000px;
     margin: 0 auto;
-    padding-bottom: 100px;
+    // padding-bottom: 100px;
     height: 400px;
 }
+
 
 .mainText {
     margin-top: 70px;
@@ -27,4 +28,30 @@
     font-family: $main-font;
     font-size: 23px;
     color: aliceblue;
+}
+
+.hero2{
+    background: url(../images/hero2.jpg) center;
+    background-size: cover; 
+    max-width: 1000px;
+    margin: 0 auto;
+    height: 400px;
+
+    h3:nth-child(1){
+        font-family: $main-font;
+        color: aliceblue;
+        font-size: 25px;
+        text-align: right;
+        margin-right: 100px;
+        padding-top: 100px;
+        margin-bottom: 20px;
+    }
+
+    h3:nth-child(2){
+        font-family: $main-font;
+        color: aliceblue;
+        font-size: 25px;
+        text-align: right;
+        margin-right: 40px;
+    }
 }
