--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -1,12 +1,27 @@
 
+.aboutHero{
+    background: url(../images/about_hero.jpg) ;
+    background-size: cover;
+    height: 550px;
+    margin-bottom: 140px;
+    
+    h3{
+        text-align: center;
+        font-family: $main-font;
+        color: #f8f8f8;
+        font-size: 20px;
+        line-height: 30px;
+    }
+}
+
 .aboutHeader{
     text-align: center;
     font-family: $main-font;
     color: #f8f8f8;
-    font-size: 22px;
-    margin-top: 60px;
+    font-size: 30px;
+    margin-top: 70px;
     font-weight: bold;
-    margin-bottom: 60px;
+    margin-bottom: 90px;
 }
 
 .aboutDesc{
