--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -38,5 +38,88 @@
 video{
     display: block;
     margin: 0 auto;
-    margin-bottom: 100px;
+    margin-bottom: 120px;
 }
+
+.teamHeader{
+    font-family: $main-font;
+    color: #f8f8f8;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+p{
+    font-family: $main-font;
+    color: #f8f8f8;
+    font-size: 20px;
+    text-align: center;
+    line-height: 30px;
+    margin-bottom: 80px;
+}
+
+.teamCon
+{
+    max-width: 1320px;
+    margin: 0 auto;
+}
+
+
+
+        
+.member{
+    margin: 0 auto;
+    max-width: 330px;
+    margin-bottom: 50px;
+
+    .tien{
+        max-width: 330px;
+
+            img{
+                max-width: 330px;
+                border-radius: 2px;
+            }
+        }
+
+    .jimmy{
+        max-width: 330px;
+
+        img{
+            max-width: 330px;
+            border-radius: 2px;
+        }
+    }
+
+    .rayn{
+        max-width: 330px;
+
+        img{
+            max-width: 330px;
+            border-radius: 2px;
+        }
+    }
+
+    button{
+        display: block;
+        margin: 0 auto;
+        height: 40px;
+        width: 100px;
+        background: none;
+        color: #f8f8f8;
+        font-size: 20px;
+        font-family: $main-font;
+        border-radius: 3px;
+        transition: transform .2s;
+        letter-spacing: 1px;
+        border: #608b8c solid 2px;
+        margin-top: 12px;
+
+    &:hover{
+        transform: scale(1.05);
+        background: #608b8c;
+        
+    }
+
+    }
+}
+
