Added copy and content, made some changes to CSS

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,9 +3,9 @@
 @import "modules/_footer";
 @import "modules/_homePage";
 @import "modules/_contact";
-@import "modules/about";
-@import "modules/portfolio";
-@import "modules/featurePage";
+@import "modules/_about";
+@import "modules/_portfolio";
+@import "modules/_featurePage";
 @import "modules/_mediaQueries";
 
 
