--- a/sass/modules/_featurePage.scss
+++ b/sass/modules/_featurePage.scss
@@ -3,9 +3,9 @@
     h2{
         font-family: $main-font;
         font-size: 30px;
-        color: #f8f8f8;
+        color: #6baea3;
         text-align: center;
-        margin-top: 30px;
+        margin-top: 50px;
         margin-bottom: 50px;
     }
 
@@ -13,14 +13,15 @@
         max-width: 800px;
         display: block;
         margin: 0 auto;
-        font-size: 20px;
+        font-size: 22px;
         line-height: 40px;
         margin-bottom: 50px;
 
     }
 
     .fishermanParagraph{
-        margin-top: 90px;
+        margin-top: 130px;
+        max-width: 650px;
     }
 
     
@@ -31,12 +32,15 @@
     }
 
     h3{
+        margin: 0 auto;
         font-family: $main-font;
-        font-size: 20px;
+        font-size: 22px;
         color: #f8f8f8;
         text-align: center;
-        margin-top: 55px;
+        margin-top: 80px;
         margin-bottom: 60px;
+        max-width: 600px;
+        
     }
 
     .mugs{
