--- a/sass/modules/_mediaQueries.scss
+++ b/sass/modules/_mediaQueries.scss
@@ -57,6 +57,10 @@
 		display: flex;
 		flex-direction: row;
 
+		img{
+			max-width: 25%;
+		}
+
 	}
 
 }
@@ -139,7 +143,7 @@
 		 height: 800px;
 
 		 .welcomeDesc{
-			 font-size: 22px;
+			 font-size: 24px;
 			 line-height: 37px;
 			 margin-bottom: 100px;
 		 }
